# qr-zwave-vault

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
app/models/: device.py  settings.py
app/services/: git_sync.py  home_assistant_sync.py  parser.py
app/static/: app.js  styles.css
app/storage/: device_store.py  settings_store.py
app/templates/: index.html
data/settings/: settings.json
docs/: current-plan.md
docs/api/: v1.md
docs/schema/: device-record-v1.md
docs/security/: baseline.md
docs/sync/: git-sync-lifecycle.md
qr_zwave_vault.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api.py  test_home_assistant_sync.py  test_models.py
